--- a/style.css
+++ b/style.css
@@ -3,20 +3,30 @@
     margin: 0;
 }
 
-.d-flex
-{
-    background-color: black;
+body{
+    background-image: url(backs.jpg);
 }
-
 .container
 {
+    margin: auto; 
+    margin-top: 200px;
+    margin-left: 400px;
+}
+
+.word{
+    font-size: 20px;
+    color: white;
+}
+
+.text{
     background-color: black;
-    padding-top: 200px;
-    padding-left: 430px;
 }
 .card-body
 {
-    background-color: rgb(72, 72, 72);
+    background-image: linear-gradient(black,green); 
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
 }
 .card {
     position: relative;
@@ -28,13 +38,9 @@
     background-color: rgb(0 0 0);
     background-clip: border-box;
     border: 1px solid rgba(0, 0, 0, 0.125);
-    border-radius: 0.25rem;
+    border-radius: 2rem;
 }
-.card-body
-{
-    display: flex;
-    justify-content: center;
-}
+
 .resultValueSection
 {
     display: flex;
